LaTeX test in mdx

--- a/src/pages/MDX Test.mdx
+++ b/src/pages/MDX Test.mdx
@@ -38,6 +38,22 @@ latex2svg({ "latex" : '\$\$\\LaTeX \\frac{1}{3}\$\$'});
 </body>
 </html>
 ```
+## LaTeX
+
+$$
+\pmatrix{a\\b}\\[5ex]
+\pmatrix{c\\d}
+$$
+
+<p>
+  Lift(<span class="math math-inline">L</span>) can be determined by Lift Coefficient
+  (<span class="math math-inline">C_L</span>) like the following equation.
+</p>
+
+<div class="math math-display">
+  L = \frac{1}{2} \rho v^2 S C_L \\[3ex]  
+</div>
+
 
 ## Graphviz (gatsby-remark-graphviz)
 
