Docs and UI refined.

--- a/src/pages/MDX Test.mdx
+++ b/src/pages/MDX Test.mdx
@@ -2,7 +2,7 @@
 
 * Code Highlight
 * Graphviz
-* LaTeX
+* $\LaTeX$
 * Themes with [Typographic.js](https://kyleamathews.github.io/typography.js/)
 * iframe embedding test
 
