test cases via scale instead of specific width and height.

--- a/src/pages/MDX Test.mdx
+++ b/src/pages/MDX Test.mdx
@@ -180,10 +180,10 @@ $$
 
 `src/components/geogebra.js`
 
-<GeoGeBra material_id="uex3vrtm" content_width="600" content_height="550" width="600" height="550" />
+<GeoGeBra material_id="uex3vrtm" content_width="600" content_height="550" scale="1.0"/>
 
 ```html
-<GeoGeBra material_id="uex3vrtm" content_width="600" content_height="550" width="600" height="550" />
+<GeoGeBra material_id="uex3vrtm" content_width="600" content_height="550" scale="1.0"/>
 ```
 
 ---
