--- a/src/pages/GeoGeBra Test.mdx
+++ b/src/pages/GeoGeBra Test.mdx
@@ -4,28 +4,28 @@ Multiple Applets shared the singlton app without multiple iframes loading.
 Much faster loading and responsive.
 
 (1)
-<GeoGeBra material_id="ttqkegw3" content_width="800" content_height="500" width="600px" height="350px" />
+<GeoGeBra material_id="ttqkegw3" content_width="800" content_height="500" scale="0.8" />
 
 (2)
-<GeoGeBra material_id="u2qarwpe" content_width="600" content_height="550" width="600px" height="350px" />
+<GeoGeBra material_id="u2qarwpe" content_width="700" content_height="550" scale="0.8" />
 
 (3)
-<GeoGeBra material_id="ppbhcjcc" content_width="800" content_height="300" width="700px" height="300px" />
+<GeoGeBra material_id="ppbhcjcc" content_width="800" content_height="300" scale="0.8" />
 
 (4)
-<GeoGeBra material_id="uex3vrtm" content_width="600" content_height="550" width="600px" height="530px" />
+<GeoGeBra material_id="uex3vrtm" content_width="600" content_height="550" scale="0.8" />
 
 (5)
-<GeoGeBra material_id="f4bwereq" content_width="800" content_height="600" width="600px" height="450px" />
+<GeoGeBra material_id="f4bwereq" content_width="800" content_height="600" scale="0.8" />
 
 (6)
-<GeoGeBra material_id="henmv2vq" content_width="700" content_height="450" width="700px" height="400px" />
+<GeoGeBra material_id="henmv2vq" content_width="700" content_height="450" scale="1.0" />
 
 (7)
-<GeoGeBra material_id="fsupg4wm" content_width="630" content_height="800" width="600px" height="600px" />
+<GeoGeBra material_id="fsupg4wm" content_width="630" content_height="800" scale="0.7" />
 
 (8)
-<GeoGeBra material_id="huvjre8h" content_width="700" content_height="500" width="600px" height="400px" />
+<GeoGeBra material_id="huvjre8h" content_width="700" content_height="500" scale="0.8" />
 
 
 # MultiLingual Test
