added front matter header

--- a/src/pages/MDX Test.mdx
+++ b/src/pages/MDX Test.mdx
@@ -1,3 +1,8 @@
+---
+title: "MDX Test"
+path: "MDX Test"
+---
+
 # MDX Test
 
 * Code Highlight
@@ -185,5 +190,3 @@ $$
 ```html
 <GeoGeBra material_id="uex3vrtm" content_width="600" content_height="550" scale="1.0"/>
 ```
-
----
