--- a/src/pages/GeoGeBra Test.mdx
+++ b/src/pages/GeoGeBra Test.mdx
@@ -1,3 +1,8 @@
+---
+title: "GeoGeBra Component Test"
+path: "GeoGeBra Component Test"
+---
+
 # GeoGeBra Component Test
 
 Multiple Applets shared the singlton app without multiple iframes loading.
@@ -26,7 +31,6 @@ Much faster loading and responsive.
 
 (8)
 <GeoGeBra material_id="huvjre8h" content_width="700" content_height="500" scale="0.8" />
-
 
 # MultiLingual Test
 
